[package]
name = "jlink-openboot-embassy"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f407vg", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.6.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.3.0", features = ["defmt" ] }
embassy-futures = { version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-bus = { version = "0.2", features = ["async"] }
embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
#futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
#embedded-storage = "0.3.1"
static_cell = "2"

[patch.crates-io]
#embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "f0a86070512ad739641cee7d9fa39d63f5c8a9f6" }
#embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "f0a86070512ad739641cee7d9fa39d63f5c8a9f6" }
#embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "f0a86070512ad739641cee7d9fa39d63f5c8a9f6" }
#embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "f0a86070512ad739641cee7d9fa39d63f5c8a9f6" }
#embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "f0a86070512ad739641cee7d9fa39d63f5c8a9f6" }
#embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "f0a86070512ad739641cee7d9fa39d63f5c8a9f6" }

embassy-stm32 = { git = "https://github.com/maximevince/embassy", rev = "abcb39a58b63c32e91b748d4380f4f6492fd28cb" }
embassy-sync = { git = "https://github.com/maximevince/embassy", rev = "abcb39a58b63c32e91b748d4380f4f6492fd28cb" }
embassy-executor = { git = "https://github.com/maximevince/embassy", rev = "abcb39a58b63c32e91b748d4380f4f6492fd28cb" }
embassy-time = { git = "https://github.com/maximevince/embassy", rev = "abcb39a58b63c32e91b748d4380f4f6492fd28cb" }
embassy-usb = { git = "https://github.com/maximevince/embassy", rev = "abcb39a58b63c32e91b748d4380f4f6492fd28cb" }
embassy-futures = { git = "https://github.com/maximevince/embassy", rev = "abcb39a58b63c32e91b748d4380f4f6492fd28cb" }

[profile.release]
#debug = 2
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"

